# Photo-Extraction-Tool

./: .gitignore  .rules  Cargo.toml  LICENSE  README.md  config.example.toml
docs/: UI_ARCHITECTURE.md
examples/: ui_demo.rs
src/: config.rs  device.rs  duplicate.rs  extractor.rs  lib.rs  main.rs  profiles.rs  tracking.rs
src/cli/: args.rs  commands.rs  mod.rs  progress.rs
src/core/: config.rs  error.rs  extractor.rs  generic_extractor.rs  mod.rs  setup.rs  tracking.rs
src/device/: mod.rs  profiles.rs  traits.rs  wpd.rs
src/duplicate/: detector.rs  mod.rs
src/testdb/: assertions.rs  generator.rs  integration.rs  mock_device.rs  mod.rs  runner.rs  scenarios.rs
src/ui/: controller.rs  device_monitor.rs  events.rs  mod.rs  preview.rs
src/ui/commands/: mod.rs
src/ui/components/: mod.rs
src/ui/keybindings/: actions.rs  keys.rs  mod.rs  registry.rs
src/ui/panels/: mod.rs
src/ui/settings/: mod.rs
src/ui/theme/: colors.rs  fonts.rs  mod.rs  spacing.rs
